# tram_ws

./: DESIGN.md  README.md  TEST_PLAN.md
tram_bringup/: CMakeLists.txt  package.xml
tram_bringup/config/: add.rviz  common_params.yaml
tram_bringup/experiments/: EXPERIMENT_GUIDE.md  highspeed_stop.csv  short_platform.csv  standard_stop.csv  switch_lane.csv  uturn_180.csv
tram_bringup/experiments/report/: report.md  slides.html
tram_bringup/launch/: sim_mpc.launch  sim_pi_lqr.launch
tram_bringup/launch/scenarios/: highspeed_stop.launch  short_platform.launch  standard_stop.launch  switch_lane.launch  uturn_180.launch
tram_bringup/scripts/: data_logger.py  generate_report.py  launch_gui.sh  run_experiments.py  scenario_gui.py
tram_control/: CMakeLists.txt  package.xml  setup.py
tram_control/config/: mpc_params.yaml  pi_lqr_params.yaml
tram_control/launch/: control_mpc.launch  control_pi_lqr.launch
tram_control/scripts/: control_node.py
tram_control/src/tram_control/: path_tracker.py
tram_control/src/tram_control/strategies/mpc/: mpc_controller.py
tram_control/src/tram_control/strategies/pi_lqr/: lqr_lateral.py  pi_speed.py
tram_description/: CMakeLists.txt  package.xml
tram_description/config/: sim_params.yaml  vehicle.json
tram_description/launch/: description.launch
tram_description/meshes/: car.mtl
tram_description/models/: vehicle_6state_dyn.py
tram_description/urdf/: tram.urdf
tram_msgs/: CMakeLists.txt  package.xml
tram_msgs/msg/: ControlCmd.msg  PathPoint.msg  TramPath.msg  VehicleState.msg
tram_planning/: CMakeLists.txt  package.xml  setup.py
tram_planning/config/: scenarios.yaml
tram_planning/launch/: planning.launch
tram_planning/scripts/: planning_node.py
tram_planning/src/tram_planning/scenarios/: __init__.py  base_scenario.py  highspeed_stop.py  short_platform.py  standard_stop.py  switch_lane.py  uturn_180.py
tram_simulator/: CMakeLists.txt  package.xml  setup.py
tram_simulator/launch/: simulator.launch
tram_simulator/scripts/: sim_node.py
tram_simulator/src/tram_simulator/: vehicle_bridge.py
tram_visualization/: CMakeLists.txt  package.xml  setup.py
tram_visualization/config/: tram_sim.rviz
tram_visualization/launch/: visualization.launch
tram_visualization/scripts/: viz_node.py
