<?xml version="1.0"?>
<package format="2">
  <name>tram_planning</name>
  <version>0.1.0</version>
  <description>Path planning node with 5 predefined tram scenarios</description>
  <maintainer email="dev@tram.local">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tram_msgs</depend>
</package>
