<?xml version="1.0"?>
<package format="2">
  <name>tram_visualization</name>
  <version>0.1.0</version>
  <description>RViz markers and visualization node for tram simulation</description>
  <maintainer email="dev@tram.local">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tram_msgs</depend>
</package>
